# wave — cross-repo dependency-cascade engine + CLI.
#
# An upstream publishes a new version; wave opens version-bump changes in every
# downstream repo, auto-merges them on green, and cascades the bump through the
# dependency DAG in tier order.
#
# The forge dependency comes via the `forge` module (@forge//:forge), NOT the
# crate_universe — so `crate` uses from_specs (third-party crates only) rather
# than from_cargo, which would otherwise try to double-manage forge.
module(
    name = "wave",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "forge", version = "0.0.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Third-party crates only (forge is a module dep, above). Hand-listed via
# from_specs so the crate_universe is independent of the Cargo.toml's
# fastverk-forge path dep (which is cargo/IDE-only).
crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
    isolate = True,
)
crate.spec(
    package = "anyhow",
    version = "1.0",
)
crate.spec(
    package = "async-trait",
    version = "0.1",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1.0",
)
crate.spec(
    package = "serde_json",
    version = "1.0",
)
crate.spec(
    package = "semver",
    version = "1",
)
crate.spec(
    package = "regex",
    version = "1",
)
crate.spec(
    package = "tracing",
    version = "0.1",
)
crate.spec(
    features = ["env-filter"],
    package = "tracing-subscriber",
    version = "0.3",
)
crate.spec(
    features = ["full"],
    package = "tokio",
    version = "1.40",
)
crate.spec(
    package = "prost",
    version = "0.13",
)
crate.spec(
    features = ["serde"],
    package = "chrono",
    version = "0.4",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5",
)
crate.spec(
    default_features = False,
    features = [
        "json",
        "rustls-tls",
    ],
    package = "reqwest",
    version = "0.12",
)
crate.spec(
    package = "urlencoding",
    version = "2",
)
crate.spec(
    package = "tempfile",
    version = "3",
)
crate.spec(
    package = "prost-build",
    version = "0.13",
)
crate.spec(
    package = "toml",
    version = "0.8",
)
crate.spec(
    package = "futures",
    version = "0.3",
)
crate.from_specs(name = "crates")
use_repo(crate, "crates")

# ─── OCI image (//wave:image) ──────────────────────────────────────
# Bundle the wave binary into a distroless/cc image for the helm
# CronJob (deploy/helm/wave). distroless/cc carries glibc + ca-certs,
# nothing else. Built + pushed from linux CI (the binary is built for
# the host platform; EKS is linux/amd64). aspect_bazel_lib is pinned to
# match the rules_oci 2.2.6 expectation.
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:6714977f9f02632c31377650c15d89a7efaebf43bab0f37c712c30fc01edb973",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_cc_linux_arm64_v8",
)

# Dev-only.
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True)
