# wave — cross-repo dependency-cascade engine + CLI.
#
# An upstream publishes a new version; wave opens version-bump changes in every
# downstream repo, auto-merges them on green, and cascades the bump through the
# dependency DAG in tier order.
#
# The forge dependency comes via the `forge` module (@forge//:forge), NOT the
# crate_universe — so `crate` uses from_specs (third-party crates only) rather
# than from_cargo, which would otherwise try to double-manage forge.
module(
    name = "wave",
    version = "0.1.0",
)

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "forge", version = "0.0.1")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2021",
    versions = ["1.95.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# Third-party crates only (forge is a module dep, above). Hand-listed via
# from_specs so the crate_universe is independent of the Cargo.toml's
# fastverk-forge path dep (which is cargo/IDE-only).
crate = use_extension(
    "@rules_rust//crate_universe:extension.bzl",
    "crate",
    isolate = True,
)
crate.spec(
    package = "anyhow",
    version = "1.0",
)
crate.spec(
    package = "async-trait",
    version = "0.1",
)
crate.spec(
    features = ["derive"],
    package = "serde",
    version = "1.0",
)
crate.spec(
    # raw_value: RawValue hands back a manifest section's VERBATIM source text,
    # which is how NpmProvider scopes a bump to the dependency sections without
    # hand-rolling a JSON scanner. Must be kept in step with wave-core's
    # Cargo.toml — this from_specs list, not that Cargo.toml, is what Bazel
    # resolves, so a feature added only there builds under cargo and fails here.
    features = ["raw_value"],
    package = "serde_json",
    version = "1.0",
)
crate.spec(
    package = "semver",
    version = "1",
)
crate.spec(
    package = "regex",
    version = "1",
)
crate.spec(
    package = "tracing",
    version = "0.1",
)
crate.spec(
    features = ["env-filter"],
    package = "tracing-subscriber",
    version = "0.3",
)
crate.spec(
    features = ["full"],
    package = "tokio",
    version = "1.40",
)
crate.spec(
    package = "prost",
    version = "0.13",
)
crate.spec(
    features = ["serde"],
    package = "chrono",
    version = "0.4",
)
crate.spec(
    features = ["derive"],
    package = "clap",
    version = "4.5",
)
crate.spec(
    default_features = False,
    features = [
        "json",
        "rustls-tls",
    ],
    package = "reqwest",
    version = "0.12",
)
crate.spec(
    package = "urlencoding",
    version = "2",
)
crate.spec(
    package = "tempfile",
    version = "3",
)
crate.spec(
    package = "prost-build",
    version = "0.13",
)
crate.spec(
    package = "toml",
    version = "0.8",
)
crate.spec(
    package = "futures",
    version = "0.3",
)
crate.from_specs(name = "crates")
use_repo(crate, "crates")

# ─── Go operator (rules_go + gazelle) ──────────────────────────────
# The wave-operator reconciles WaveCascade CRs into the Jobs that run the CLI
# above. Go, not Rust, on purpose: the fleet is five-for-five Go/kubebuilder and
# `kube` is pinned client-only across its Rust crates — Go owns the CRD schema,
# other languages read CRs via the dynamic API (plugin-tbzl/src/buildrun.rs).
# So the operator never links wave-core; it renders `wave discover …` argv.
#
# Versions match the fastverk platform + agents operators so the shared bzlmod
# cache is reused. BUILD files under operator/ are gazelle-generated
# (`bazel run //:gazelle`) with the prefix `github.com/fastverk/wave/operator`.
#
# NOTE: deliberately NO hermetic_cc_toolchain here, unlike the platform operator.
# The operator is pure Go and this module builds clean without it; a global
# register_toolchains() of the non-libc-aware zig toolchains also matches the
# EXEC platform on linux, which reds protobuf's upb host tools unless paired with
# `--no-gc-sections`. Only add zig if a build actually needs it, and add the
# linkopts with it.
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "gazelle", version = "0.51.0")

# The hermetic Go SDK, pinned to the fleet's. operator/go.mod declares `go 1.26`
# (a floor).
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.4")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//operator:go.mod")
use_repo(go_deps, "io_k8s_api", "io_k8s_apimachinery", "io_k8s_client_go", "io_k8s_sigs_controller_runtime")

# `use_repo(go_deps, ...)` — the external Go repos the operator's BUILD files
# reference. Maintained by `bazel mod tidy`.

# ─── OCI image (//wave:image) ──────────────────────────────────────
# Bundle the wave binary into a distroless/cc image for the helm
# CronJob (deploy/helm/wave). distroless/cc carries glibc + ca-certs,
# nothing else. Built + pushed from linux CI (the binary is built for
# the host platform; EKS is linux/amd64). aspect_bazel_lib is pinned to
# match the rules_oci 2.2.6 expectation.
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_cc",
    digest = "sha256:6714977f9f02632c31377650c15d89a7efaebf43bab0f37c712c30fc01edb973",
    image = "gcr.io/distroless/cc-debian12",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(
    oci,
    "distroless_cc",
    "distroless_cc_linux_amd64",
    "distroless_cc_linux_arm64_v8",
)

# The operator is a single PURE-static Go binary, so it needs no libc — static
# rather than the cc base the Rust CLI uses. Same digest the fastverk platform
# operator pins. amd64 only (EKS): the image rule therefore needs a linux/amd64
# platform regardless of host — see `--config=operator-image` in .bazelrc.
oci.pull(
    name = "distroless_static",
    digest = "sha256:d093aa3e30dbadd3efe1310db061a14da60299baff8450a17fe0ccc514a16639",  # tag: nonroot
    image = "gcr.io/distroless/static-debian12",
    platforms = ["linux/amd64"],
)
use_repo(
    oci,
    "distroless_static",
    "distroless_static_linux_amd64",
)

# Dev-only.
bazel_dep(name = "rules_shell", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.7.2", dev_dependency = True)
