"""wave-core — the cross-repo dependency-cascade engine (lib).

The wave proto is self-contained (its own RepoRef/ChangeRef) and compiled by
build.rs (prost-build) under a cargo_build_script — so wave's @crates prost stays
independent of forge's across the module boundary. The forge dependency is
`@forge//:forge` (a module dep); wave-core converts to/from forge's runtime
RepoRef/ChangeRef at the forge edge."""

load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")

package(default_visibility = ["//visibility:public"])

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    data = ["//proto/wave/v1:wave.proto"],
    edition = "2021",
    build_script_env = {
        "PROTOC": "$(execpath @protobuf//:protoc)",
    },
    tools = ["@protobuf//:protoc"],
    deps = ["@crates//:prost-build"],
)

rust_library(
    name = "wave_core",
    srcs = glob(["src/**/*.rs"]),
    crate_root = "src/lib.rs",
    edition = "2021",
    proc_macro_deps = ["@crates//:async-trait"],
    deps = [
        ":build_script",
        "@crates//:anyhow",
        "@crates//:chrono",
        "@crates//:prost",
        "@crates//:regex",
        "@crates//:semver",
        "@crates//:serde",
        "@crates//:serde_json",
        "@crates//:tokio",
        "@crates//:tracing",
        "@forge//:forge",
    ],
)

rust_test(
    name = "wave_core_test",
    crate = ":wave_core",
    edition = "2021",
    deps = ["@crates//:tempfile"],
)
