"""wave — the cross-repo dependency-cascade CLI."""

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "wave",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    # async-trait is a proc-macro → proc_macro_deps, not deps (the `discover`
    # datasource impls + the enumerate test's Forge mock both use #[async_trait]).
    proc_macro_deps = ["@crates//:async-trait"],
    deps = [
        "//wave-core:wave_core",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:reqwest",
        "@crates//:serde",
        "@crates//:tokio",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
        "@crates//:urlencoding",
        "@forge//:forge",
    ],
)

rust_test(
    name = "wave_test",
    crate = ":wave",
    edition = "2021",
)
