[package]
name = "wave"
version = "0.0.1"
edition = "2021"
rust-version = "1.95.0"
license = "MIT"
repository = "https://github.com/fastverk/wave"
description = "Cross-repo dependency-cascade CLI: propose / start / status / reconcile / trace."

[[bin]]
name = "wave"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
urlencoding = "2"
wave-core = { path = "../wave-core" }
fastverk-forge = { path = "../../forge" }

[lints.rust]
unsafe_code = "forbid"
