load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/fastverk/wave/operator/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//operator/api/v1:api",
        "//operator/internal/controller",
        "@io_k8s_apimachinery//pkg/runtime",
        "@io_k8s_apimachinery//pkg/util/runtime",
        "@io_k8s_client_go//kubernetes/scheme",
        "@io_k8s_sigs_controller_runtime//:controller-runtime",
        "@io_k8s_sigs_controller_runtime//pkg/healthz",
        "@io_k8s_sigs_controller_runtime//pkg/log/zap",
        "@io_k8s_sigs_controller_runtime//pkg/metrics/server",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

# ── Container image (rules_oci, no Dockerfile) ────────────────────────────────
# A single static Go binary on the distroless-static base (nonroot), mirroring
# the fastverk platform + modgraph operators. Built for linux/amd64 explicitly so
# the image is EKS-ready regardless of build host; the image rule additionally
# needs a linux/amd64 PLATFORM because its base is amd64-only — hence
# `--config=operator-image` (or `--config=rbe`). Everything else here builds on
# the host platform without it.
go_binary(
    name = "manager_linux_amd64",
    embed = [":cmd_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "manager_layer",
    srcs = [":manager_linux_amd64"],
    package_dir = "/",
    remap_paths = {"/manager_linux_amd64": "/manager"},
)

oci_image(
    name = "wave-operator-image",
    base = "@distroless_static",
    entrypoint = ["/manager"],
    exposed_ports = [
        "8080",  # metrics
        "8081",  # health/ready probes
    ],
    tags = [
        "image",
        "manual",  # amd64-only base; build with --config=operator-image
    ],
    tars = [":manager_layer"],
    user = "65532:65532",  # distroless static `nonroot`
)

oci_load(
    name = "wave-operator-image_load",
    image = ":wave-operator-image",
    repo_tags = ["fastverk/wave-operator:dev"],
    tags = [
        "image",
        "manual",
    ],
)

# The build-runner derives the ECR repo from the target-name basename (minus
# `-image_push`), so the name MUST be the repo name: `wave-operator`.
# `repository` is the default; the registry is overridable at push time
#   bazel run //operator/cmd:wave-operator-image_push --config=operator-image -- \
#     --repository=<acct>.dkr.ecr.us-east-1.amazonaws.com/wave-operator --tag=$SHA
oci_push(
    name = "wave-operator-image_push",
    image = ":wave-operator-image",
    repository = "ghcr.io/fastverk/wave-operator",
    tags = [
        "image",
        "manual",
    ],
)
